# python-propagate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  .pylintrc  LICENSE  homework1.py  pyproject.toml
.github/workflows/: black.yaml  build.yaml  mypy.yaml  publish.yaml  pylint.yaml  pylint.yml  test.yaml
client/: generate_data.py
data/: planets.db
examples/: geo_sat_data_scenario.yaml  geo_sat_nominal_data_scenario.yaml  leo_sat_data_scenario.yaml  van_data.yaml
src/python_propagate/Agents/: __init__.py  spacecraft.py  state.py
src/python_propagate/Dynamics/: J2.py  J3.py  __init__.py  drag.py  keplerian.py  stm.py  stm_kep_J2_J3_drag.py
src/python_propagate/Environment/: Planets.py
src/python_propagate/Scenario/: __init__.py
src/python_propagate/Utilities/: create_planet_database.py  load_spice.py  transforms.py  units.py
src/python_propagate/agents/: __init__.py  spacecraft.py  state.py
src/python_propagate/client/: generate_data.py
src/python_propagate/constructors/: yaml_constructors.py  yaml_loader.py
src/python_propagate/dynamics/: J2.py  __init__.py  drag.py  j2.py  j3.py  stm.py
src/python_propagate/environment/: planets.py
src/python_propagate/scenario/: __init__.py  data_generator.py
src/python_propagate/utilities/: string_format.py  transforms.py  units.py
tests/: conftest.py  test_J2.py  test_J3.py  test_drag.py  test_kepler.py
tests/Dynamics/: test_J2.py  test_J3.py  test_drag.py  test_kepler.py  test_stm.py
tests/data/: Dynamics_ComparisonResults.mat
